--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I'm Mary. I am a graphic designer. I worked in marketing for 3 years in the food industry, and now I am on my own doing contract work and freelance projects from print design, to chalkboard art to web design.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Edina, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p> Camping, craft projects, sailing, cooking, and as of summer 2019 - golfing. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Designing beautiful projects across many platforms for clients that I believe in.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>St. Louis Park, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am a creator, planner, and a problem solver. Learning the hard skills and languages of coding and web development will open me up to the ever expanding capabilites the web holds, make me a better web designer. Obtaining a new career in the field wouldn't be so bad either.</p>
     </section>
 
     <footer id="footer">
