updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>St. Louis Park, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I am a creator, planner, and a problem solver. Learning the hard skills and languages of coding and web development will open me up to the ever expanding capabilites the web holds, make me a better web designer. Obtaining a new career in the field wouldn't be so bad either.</p>
+      <p>I am a creator, a planner, and a problem solver. Learning the hard skills and languages of coding will give me an understanding of the ever-expanding capabilities web development holds, and in turn, make me a better designer, producer, and thinker.  A new shiny job would be neat too. </p>
     </section>
 
     <footer id="footer">
