updating profile questions

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hi I'm Mary. I am a graphic designer. I worked in marketing for 3 years in the food industry, and now I am on my own doing contract work and freelance projects from print design, to chalkboard art to web design.</p>
+      <p>Hello there - I'm Mary. I mostly identify as a graphic designer. In the last year I've been self-employed, completing a wide variety of creative projects for small businesses in the Twin Cities. My background is in camp counseling and food marketing. </p>
       <h1>Where I'm From</h1>
       <p>Edina, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p> Camping, craft projects, sailing, cooking, and as of summer 2019 - golfing. </p>
+      <p> Camping, craft projects, sailing, cooking, and as of this summer, golfing. </p>
       <h1>What's your dream job?</h1>
-      <p>Designing beautiful projects across many platforms for clients that I believe in.</p>
+      <p>Designing beautiful products across digital and physical platforms for clients that I believe in.</p>
       <h1>Where do you live?</h1>
       <p>St. Louis Park, MN</p>
       <h1>Why do you want to be a web developer?</h1>
