updating where I'm from

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>Hello there - I'm Mary. I mostly identify as a graphic designer. In the last year I've been self-employed, completing a wide variety of creative projects for small businesses in the Twin Cities. My background is in camp counseling and food marketing. </p>
       <h1>Where I'm From</h1>
-      <p>Edina, MN</p>
+      <p>San Diego, CA >>> Edina, MN >>> Ames, IA</p>
       <h1>What are your favorite hobbies?</h1>
       <p> Camping, craft projects, sailing, cooking, and as of this summer, golfing. </p>
       <h1>What's your dream job?</h1>
